FIXUP - Formatting changes and satisfying Sonarqube